--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -62,8 +62,8 @@ jobs:
           echo "storeFile=$RUNNER_TEMP/keystore.jks" >> local.properties
       - name: Build app
         run: |
-          yarn tauri android build --apk true --target aarch64 armv7 --split-per-abi --ci
-          yarn tauri android build --aab true --apk true --target aarch64 armv7 --ci
+          yarn tauri android build --apk --target aarch64 armv7 --split-per-abi --ci
+          yarn tauri android build --aab --apk --target aarch64 armv7 --ci
         env:
           NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/29.0.14206865/
       - name: Publish artifact (APK - ARMv7)
