--- a/src-tauri/plugin/permissions/default.toml
+++ b/src-tauri/plugin/permissions/default.toml
@@ -6,5 +6,8 @@ permissions = [
 	"allow-broadcast-event",
 	"allow-list-assets",
 	"allow-dismiss-splash",
-	"allow-register-listener"
+	"allow-register-listener",
+	"allow-db-test",
+	"allow-db-run-migrations",
+	"allow-db-migrate-old"
 ]
