--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,13 +18,10 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 debug = ["tauri/devtools"]
 
 [build-dependencies]
-tauri-build = { version = "2.5.3", features = [] }
+tauri-build = "2.5.3"
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-log = "0.4"
-tauri = { version = "2.10.2", features = [] }
+tauri = "2.10.2"
 tauri-plugin-store = "2.4.2"
 tauri-plugin-fs = "2.4.5"
 tauri-plugin-os = "2.3.2"
@@ -33,6 +30,19 @@ tauri-plugin-opener = "2.5.3"
 tauri-plugin-http = "2.5.7"
 tauri-plugin-process = "2.3.1"
 tauri-plugin-ampersand = { path = "./plugin" }
+
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+log = "0.4"
+
+rusqlite = { version = "0.37.0", features = ["bundled-full"] }
+uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }
+time = { version = "0.3.41", features = ["serde"] }
+rmp-serde = "1.3.0"
+strum_macros = "0.27.2"
+serde_bytes = "0.11.19"
+extruct = "0.2.1"
+rusqlite-from-row = { git = "https://github.com/mcmah309/rusqlite-from-row", branch = "patch-1" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 tauri-plugin-m3 = "0.2.2"
