--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ tauri-plugin-ampersand = { path = "./plugin" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
+thiserror = "2"
 
 rusqlite = { version = "0.37.0", features = ["bundled-full"] }
 uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }
